--- a/calculus.tex
+++ b/calculus.tex
@@ -4,6 +4,8 @@
 
 \newcommand{\ds}{\displaystyle}
 
+\resettagform
+
 
 \pagestyle{plain}
 
@@ -47,9 +49,11 @@
   \]
   \begin{enumerate}[label=(\arabic*)]
     \setlength{\itemsep}{1ex}
-  \item $\{a_n\}$ が狭義単調増加であることを確認しよう．
 
-  \item $\{a_n\}$ が上に有界であることを確認しよう．
+
+  \item $\{a_n\}$ が上に有界であることを確認しよう
+    
+  \item $\{a_n\}$ が狭義単調増加であることを確認しよう．
 
   \item $\{a_n\}$ の極限を求めよう．
 
@@ -372,6 +376,89 @@
     
 \end{enumerate}
 
+
+\newpage
+
+
+\section*{解答}
+
+\begin{enumerate}[label=\ref{sec:sequence}.\arabic*]
+  \setlength{\itemsep}{1zh}
+  
+\item
+  \begin{enumerate}[label=(\arabic*)]
+    \setlength{\itemsep}{1ex}
+    
+  \item
+    $\ds 0 \leqq \left| \frac{\sin n}{n}\right| \leqq \frac{1}{n} \to
+    0$ より，はさみうちの原理から ${\ds \lim_{n \to \infty}} \frac{\sin
+      n}{n} = 0.$
+
+  \item
+    $\ds 0 \leqq \left| \frac{1+(-1)^n}{n}\right| \leqq \frac{2}{n}
+    \to 0$ より，はさみうちの原理から
+    ${\ds \lim_{n \to \infty}} \frac{1+(-1)^n}{n} =0.$
+
+  \item $k$ を $2^k < n \leqq 2^{k+1}$ となる自然数とする．$n \to \infty$ のとき $k \to \infty$ なので
+    \[
+      \begin{aligned}
+        1+ \frac{1}{2} + \frac{1}{3} + \cdots + \frac{1}{n} \geqq & 1+
+        \frac{1}{2} + \left(\frac{1}{3} + \frac{1}{4}\right) +
+        \left(\frac{1}{5} + \frac{1}{6} + \frac{1}{7} + \frac{1}{8}
+        \right) + \cdots +
+        \left( \cdots + \frac{1}{2^k}\right)\\
+        \geqq & 1+ \frac{1}{2}+ \left(\frac{1}{4}+\frac{1}{4}\right) +
+        \left( \frac{1}{8}+\frac{1}{8}+\frac{1}{8} +\frac{1}{8}\right)
+        + \cdots + \left( \frac{1}{2^k} + \cdots +
+          \frac{1}{2^k}\right)\\
+        =& 1 + \frac{1}{2} + \frac{1}{2} + \cdots + \frac{1}{2} = 1 +
+        \frac{k}{2} \to \infty \; (k \to \infty)
+      \end{aligned}
+    \]
+    より，${\ds \lim_{n \to \infty}} \left(1+\frac{1}{2} + \frac{1}{3} +
+      \cdots + \frac{1}{n}\right) = \infty.$
+  \end{enumerate}
+
+\item
+  \begin{enumerate}[label=(\arabic*)]
+    \setlength{\itemsep}{1ex}
+
+  \item $a_1=-2<0$ と漸化式から任意の $n$ で $a_n <0$ なので，$\{a_n\}$ は上に有界で
+    ある．
+    
+  \item まず，$a_2=-\frac{3}{2} >a_1$ である．$n \geqq 2$ に対して
+    は $a_{n+1}-a_{n} = \frac{2-a_{n}^2}{2a_n} = -
+    \frac{(a_{n-1}^2-2)^2}{4a_{n-1}^2 \cdot 2a_n} \geqq 0$ である．ここ
+    で，$a_1$ が有理数なのと漸化式の形から $\{a_n\}$ の各項は有理数であ
+    る．従って，$a_{n-1}^2 \neq 2$ なので $a_{n+1}-a_n >0$ である．よっ
+    て，$\{a_n\}$ は狭義単調増加である．
+    
+  \item (1), (2) から $\{a_n\}$ は収束するので，その極限値を $\alpha$ とする．
+    とする．$\alpha = {\ds \lim_{n \to \infty}} a_{n+1} = {\ds \lim_{n \to
+        \infty}} \left( \frac{a_n}{2}+\frac{1}{a_n}\right) =
+    \frac{\alpha}{2}+\frac{1}{\alpha}$ より，$\alpha^2 = 2$ である．任意
+    の $n$ に対して $a_n <0$ なので $\ds \lim_{n \to \infty} a_n =
+    -\sqrt{2}$ である．
+
+  \item 漸化式から直接計算して，以下のように $2$ に近づいていることがわかる．
+    \[
+      a_2^2 = \left(-\frac{3}{2}\right)^2  = 2.25, \;
+      a_3^2 = \left(-\frac{17}{12}\right)^2  =2.0069\cdots, \;
+      a_4^2=\left(-\frac{577}{408}\right)^2 =2.000006\cdots
+    \]
+  \end{enumerate}
+  
+\item $a_1=3>0$ と漸化式から任意の $n$ で $a_n>0$ なので，$\{a_n\}$ は
+  下に有界である．さらに，$n \geqq 2$ に対して
+  $a_n - a_{n+1} = \frac{a_n^3-3}{3a_n^2} =
+  \frac{(8a_{n-1}^3+3)(a_{n-1}^3-3)^2}{27a_{n-1}^6 \cdot 3a_{n}^2}
+  \geqq 0$ だが $a_{n-1}$ は有理数だから $a_{n-1}^3 \neq 3$ より $a_n
+  > a_{n+1}$ なので，$\{a_n\}$ は狭義単調増加である（$a_2>a_1$ は明らか）．
+  よって，$\{a_n\}$ は収束するので，その極限値を $\alpha$ とすれば，前
+  問と同様に漸化式から $\alpha = \frac{2}{3\alpha}+\frac{1}{a^2}$ が成
+  り立つので，$\alpha^3=3$
+  である．従って，$\ds \lim_{n \to \infty} a_n = \sqrt[3]{3}$ である．
+\end{enumerate}
 
 
 
