--- a/calculus.tex
+++ b/calculus.tex
@@ -449,15 +449,14 @@
   \end{enumerate}
   
 \item $a_1=3>0$ と漸化式から任意の $n$ で $a_n>0$ なので，$\{a_n\}$ は
-  下に有界である．さらに，$n \geqq 2$ に対して
-  $a_n - a_{n+1} = \frac{a_n^3-3}{3a_n^2} =
+  下に有界である．さらに，$n \geqq 2$
+  に対して$a_n - a_{n+1} = \frac{a_n^3-3}{3a_n^2} =
   \frac{(8a_{n-1}^3+3)(a_{n-1}^3-3)^2}{27a_{n-1}^6 \cdot 3a_{n}^2}
-  \geqq 0$ だが $a_{n-1}$ は有理数だから $a_{n-1}^3 \neq 3$ より $a_n
-  > a_{n+1}$ なので，$\{a_n\}$ は狭義単調増加である（$a_2>a_1$ は明らか）．
-  よって，$\{a_n\}$ は収束するので，その極限値を $\alpha$ とすれば，前
-  問と同様に漸化式から $\alpha = \frac{2}{3\alpha}+\frac{1}{a^2}$ が成
-  り立つので，$\alpha^3=3$
-  である．従って，$\ds \lim_{n \to \infty} a_n = \sqrt[3]{3}$ である．
+  \geqq 0$ なので，$\{a_n\}$ は（$n\geqq 2$ で）単調減少である．よっ
+  て，$\{a_n\}$ は収束するので，その極限値を $\alpha$ とすれば，前問と
+  同様に漸化式から $\alpha = \frac{2}{3\alpha}+\frac{1}{a^2}$ が成り立
+  つので，$\alpha^3=3$である．従って，$\ds \lim_{n \to \infty} a_n =
+  \sqrt[3]{3}$ である．
 \end{enumerate}
 
 
