--- a/calculus.tex
+++ b/calculus.tex
@@ -3,6 +3,8 @@
 \usepackage{amsmath,amsfonts, bm, braket, setspace, emathEy, enumitem}
 
 \newcommand{\ds}{\displaystyle}
+\renewcommand{\dlim}{\lim\limits} %emathEyを使わないなら\newcommand
+
 
 \resettagform
 
@@ -383,40 +385,32 @@
 \section*{解答}
 
 \begin{enumerate}[label=\ref{sec:sequence}.\arabic*]
-  \setlength{\itemsep}{1zh}
+  \setlength{\itemsep}{1ex}
   
 \item
   \begin{enumerate}[label=(\arabic*)]
     \setlength{\itemsep}{1ex}
     
   \item
-    $\ds 0 \leqq \left| \frac{\sin n}{n}\right| \leqq \frac{1}{n} \to
-    0$ より，はさみうちの原理から ${\ds \lim_{n \to \infty}} \frac{\sin
+    $0 \leqq \left| \frac{\sin n}{n}\right| \leqq \frac{1}{n} \to
+    0$ より，はさみうちの原理から $\dlim_{n \to \infty} \frac{\sin
       n}{n} = 0.$
 
   \item
-    $\ds 0 \leqq \left| \frac{1+(-1)^n}{n}\right| \leqq \frac{2}{n}
+    $0 \leqq \left| \frac{1+(-1)^n}{n}\right| \leqq \frac{2}{n}
     \to 0$ より，はさみうちの原理から
-    ${\ds \lim_{n \to \infty}} \frac{1+(-1)^n}{n} =0.$
+    $\dlim_{n \to \infty}\frac{1+(-1)^n}{n} =0.$
 
-  \item $k$ を $2^k < n \leqq 2^{k+1}$ となる自然数とする．$n \to \infty$ のとき $k \to \infty$ なので
-    \[
-      \begin{aligned}
-        1+ \frac{1}{2} + \frac{1}{3} + \cdots + \frac{1}{n} \geqq & 1+
-        \frac{1}{2} + \left(\frac{1}{3} + \frac{1}{4}\right) +
-        \left(\frac{1}{5} + \frac{1}{6} + \frac{1}{7} + \frac{1}{8}
-        \right) + \cdots +
-        \left( \cdots + \frac{1}{2^k}\right)\\
-        \geqq & 1+ \frac{1}{2}+ \left(\frac{1}{4}+\frac{1}{4}\right) +
-        \left( \frac{1}{8}+\frac{1}{8}+\frac{1}{8} +\frac{1}{8}\right)
-        + \cdots + \left( \frac{1}{2^k} + \cdots +
-          \frac{1}{2^k}\right)\\
-        =& 1 + \frac{1}{2} + \frac{1}{2} + \cdots + \frac{1}{2} = 1 +
-        \frac{k}{2} \to \infty \; (k \to \infty)
-      \end{aligned}
-    \]
-    より，${\ds \lim_{n \to \infty}} \left(1+\frac{1}{2} + \frac{1}{3} +
-      \cdots + \frac{1}{n}\right) = \infty.$
+  \item $k$ を $2^k < n \leqq 2^{k+1}$ となる自然数とする．$n \to
+    \infty$ のとき $k \to \infty$
+    なので，$1+\frac{1}{2}+\frac{1}{3}+ \cdots + \frac{1}{n} \geqq 1 +
+    \frac{1}{2} + \left( \frac{1}{3} + \frac{1}{4}\right) + \cdots +
+    \left( \cdots + \frac{1}{2^k}\right) \geqq 1 + \frac{1}{2} +
+    \left(\frac{1}{4} + \frac{1}{4}\right) + \cdots + \left(
+      \frac{1}{2^k} + \cdots + \frac{1}{2^k}\right) = 1+ \frac{k}{2}
+    \to \infty \; (k \to
+    \infty)$ より，${\ds \lim_{n \to \infty}} \left(1+\frac{1}{2} +
+      \frac{1}{3} + \cdots + \frac{1}{n}\right) = \infty.$
   \end{enumerate}
 
 \item
@@ -433,19 +427,15 @@
     る．従って，$a_{n-1}^2 \neq 2$ なので $a_{n+1}-a_n >0$ である．よっ
     て，$\{a_n\}$ は狭義単調増加である．
     
-  \item (1), (2) から $\{a_n\}$ は収束するので，その極限値を $\alpha$ とする．
-    とする．$\alpha = {\ds \lim_{n \to \infty}} a_{n+1} = {\ds \lim_{n \to
-        \infty}} \left( \frac{a_n}{2}+\frac{1}{a_n}\right) =
-    \frac{\alpha}{2}+\frac{1}{\alpha}$ より，$\alpha^2 = 2$ である．任意
-    の $n$ に対して $a_n <0$ なので $\ds \lim_{n \to \infty} a_n =
-    -\sqrt{2}$ である．
+  \item (1), (2) から $\{a_n\}$ は収束するのでその極限値を $\alpha$ と
+    する．$\alpha = \dlim_{n \to \infty} a_{n+1} = \dlim_{n \to
+      \infty} \left( \frac{a_n}{2}+\frac{1}{a_n}\right) =
+    \frac{\alpha}{2}+\frac{1}{\alpha}$ より，$\alpha^2 = 2$ であ
+    る．$a_n <0$ より $\dlim_{n \to \infty} a_n = -\sqrt{2}$.
 
-  \item 漸化式から直接計算して，以下のように $2$ に近づいていることがわかる．
-    \[
-      a_2^2 = \left(-\frac{3}{2}\right)^2  = 2.25, \;
-      a_3^2 = \left(-\frac{17}{12}\right)^2  =2.0069\cdots, \;
-      a_4^2=\left(-\frac{577}{408}\right)^2 =2.000006\cdots
-    \]
+  \item $a_2^2 = \left(-\frac{3}{2}\right)^2 =
+    2.25, \; a_3^2 = \left(-\frac{17}{12}\right)^2 =2.0069\cdots, \;
+    a_4^2=\left(-\frac{577}{408}\right)^2 =2.000006\cdots$ 
   \end{enumerate}
   
 \item $a_1=3>0$ と漸化式から任意の $n$ で $a_n>0$ なので，$\{a_n\}$ は
@@ -453,12 +443,69 @@
   に対して$a_n - a_{n+1} = \frac{a_n^3-3}{3a_n^2} =
   \frac{(8a_{n-1}^3+3)(a_{n-1}^3-3)^2}{27a_{n-1}^6 \cdot 3a_{n}^2}
   \geqq 0$ なので，$\{a_n\}$ は（$n\geqq 2$ で）単調減少である．よっ
-  て，$\{a_n\}$ は収束するので，その極限値を $\alpha$ とすれば，前問と
+  て，$\{a_n\}$ は収束するのでその極限値を $\alpha$ とすれば，前問と
   同様に漸化式から $\alpha = \frac{2}{3\alpha}+\frac{1}{a^2}$ が成り立
-  つので，$\alpha^3=3$である．従って，$\ds \lim_{n \to \infty} a_n =
-  \sqrt[3]{3}$ である．
+  つので，$\alpha^3=3$である．従って，$\dlim_{n \to \infty} a_n
+  = \sqrt[3]{3}$.
 \end{enumerate}
 
+\begin{enumerate}[label=\ref{sec:limit}.\arabic*]
+
+  \setlength{\itemsep}{1ex}
+  
+\item
+  \begin{enumerate}[label=(\arabic*)]
+    \setlength{\itemsep}{1ex}
+    
+  \item
+    $0 \leqq \left| \sqrt{x}\sin \frac{1}{x}\right| \leqq \sqrt{x} \to
+    0 \; (x \to +0)$ より，$\dlim_{x \to +0} \sqrt{x} \sin \frac{1}{x} =0$.
+    
+  \item
+    $0 \leqq \left| \frac{\sin x}{x} \right| \leqq \frac{1}{x} \to 0
+    \; (x \to \infty)$ より，$\dlim_{x \to \infty} \frac{\sin x}{x}=0$.
+
+  \item $\frac{x-\tan^{-1}{x}}{x} = 1 -\frac{\tan^{-1}x}{x}$
+    と $\left|\frac{\tan^{-1}x}{x}\right| <
+    \frac{\pi/2}{x} \to 0 \; ( x \to \infty)$
+    より，$\dlim_{x \to \infty}\frac{x-\tan^{-1}x}{x}=1$.
+  \end{enumerate}
+
+\item 
+  \begin{enumerate}[label=(\arabic*)]
+    \setlength{\itemsep}{1ex}
+    
+  \item
+    $\dlim_{x \to +0} f(x)= 3, \dlim_{x \to -0} f(x) = A =
+    f(0)$ より，$A=3$.
+
+  \item
+    $\dlim_{x \to +0} f(x)  =1,
+    \dlim_{x \to -0} f(x) = \frac{\pi}{2} +A = f(0)$ よ
+    り，$A=1-\frac{\pi}{2}$.
+
+  \item
+    $\dlim_{x \to +0} f(x) = \tan^{-1}\left(-\frac{1}{2}\right),
+    \dlim_{x \to -0} f(x) = \sin^{-1} A = f(0)$ よ
+    り，$\tan^{-1}\left(-\frac{1}{2}\right) = \sin^{-1}A$ であ
+    る．$X=\tan^{-1}\left(-\frac{1}{2}\right)$ とおくと
+    $\tan X = -\frac{1}{2}$ かつ $-\frac{\pi}{2} < X < 0$ なの
+    で，$A=\sin \left(\tan^{-1}\left(-\frac{1}{2}\right)\right) = \sin
+    X = -\frac{1}{\sqrt{5}}$.
+
+  \item
+    $\dlim_{x \to +0} f(x) = \dlim_{x \to +0} \frac{\sin
+      3x}{2x}=\frac{3}{2}, \; \dlim_{x \to -0} f(x) = A = f(0)$ よ
+    り，$A=\frac{3}{2}$.
+
+  \item
+    $\dlim_{x \to +0} f(x) = \dlim_{x \to +0} e^{-\frac{1}{x}} = 0,
+    \dlim_{x \to -0} f(x) = A = f(0)$ より，$A=0$.
+
+  \item $\dlim_{x \to 0} f(x) = \dlim_{x \to 0} e^{-\frac{1}{x^2}} = 0, f(0)=A$ より，$A=0$.
+  \end{enumerate}
+
+\end{enumerate}
 
 
 
