--- a/calculus.tex
+++ b/calculus.tex
@@ -215,7 +215,7 @@
 
 
 
-\section{ 不定形の極限}\label{sec:hospital}
+\section{不定形の極限}\label{sec:hospital}
 
 \begin{enumerate}[label=\arabic{section}.\arabic*]
 
@@ -283,7 +283,7 @@
 
 \newpage
 
-\section{ テイラーの定理}\label{sec:taylor}
+\section{テイラーの定理}\label{sec:taylor}
 
 \begin{enumerate}[label=\arabic{section}.\arabic*]
 
@@ -507,6 +507,71 @@
 
 \end{enumerate}
 
+\begin{enumerate}[label=\ref{sec:derivative}.\arabic*]
+  \setlength{\itemsep}{1ex}
+  
+\item
+  \begin{enumerate}[label=(\arabic*)]
+    \setlength{\itemsep}{1ex}
+    
+  \item
+    $\dlim_{x \to 0} \frac{f(x)-f(0)}{x} = \dlim_{x \to 0}\log|x|
+    =-\infty$ より，微分不可能．
+    
+  \item
+    $\dlim_{x \to 0} \frac{f(x)-f(0)}{x} = \dlim_{x \to 0}
+    \frac{1-\cos x}{x^2}=\frac{1}{2}$ より，微分可能で $f'(0) =
+    \frac{1}{2}$.
+    
+  \item
+    $0 \leqq \left| \frac{f(x)-f(0)}{x}\right| = \left| x \sin
+      \frac{1}{x}\right| \leqq |x| \to 0 \; (x \to 0)$ より，微分可能で $f'(0)=0$.
+    
+  \item $x>0$ で 
+    $\frac{f(x)-f(0)}{x} = \frac{1}{\sqrt{x}} \sin \frac{1}{x}$ よ
+    り，$\dlim_{x \to +0} \frac{f(x)-f(0)}{x}$ が存在しないから微分不可
+    能．
+  \end{enumerate}
 
+\item $f$ は $x=0$ で連続なので，$C= f(0) = \dlim_{x \to +0} f(x) =
+  \cos 0=1$ である．また，$f$ は $x=0$ で微分可能なので
+  $f'(0) = \dlim_{x \to +0} \frac{f(x)-f(0)}{x} = \dlim_{x \to -0}
+  \frac{f(x)-f(0)}{x}$
+  である．$\dlim_{x \to +0} \frac{f(x)-f(0)}{x} = \dlim_{x \to +0}
+  \frac{\cos x -1}{x} = 0, \dlim_{x \to -0} \frac{f(x)-f(0)}{x} =
+  \dlim_{x \to -0} (Ax+B) = B$ より $f'(0) = B = 0$ である．さら
+  に，$f'$ は $x=0$ で微分可能なので
+  $f''(0) = \dlim_{x \to +0} \frac{f'(x)-f'(0)}{x} = \dlim_{x \to -0}
+  \frac{f'(x)-f'(0)}{x}$
+  である．$\dlim_{x \to +0} \frac{f'(x)-f'(0)}{x} = \dlim_{x \to
+    +0}\frac{-\sin x}{x}=-1, \dlim_{x \to -0}
+  \frac{f'(x)-f'(0)}{x}=\dlim_{x \to -0}2A = 2A$ より
+  $f''(0)=-1, A=-\frac{1}{2}$
+  である．最後に，$\dlim_{x \to +0} f''(x) = \dlim_{x \to +0} -\cos x
+  = -1, \dlim_{x \to -0} f''(x) = \dlim_{x \to -0}
+  \left(-\frac{1}{2}x^2+1\right)'' = -1$ より
+  $\dlim_{x \to 0} f''(x) = f''(0)$ なので，$f''$ は $x=0$ で連続である．
+
+\item $g(0)=a_0, \, g'(0)=a_1, \, g''(0)=2a_2, \,
+  g^{(3)}(0)=6a_3$ より
+  $a_0=g(0)=f(0), \, a_1= g'(0) = f'(0), \, a_2 = g''(0)/2 = f''(0)/2,
+  \, a_3=g^{(3)}(0)/6=f^{(3)}(0)/6$ である．
+  \begin{enumerate}[label=(\arabic*)]
+    \setlength{\itemsep}{1ex}
+    
+  \item
+    $a_0 = \sin 0 =0, \, a_1 = \cos 0 = 1, \, a_2 = -\frac{1}{2}\sin 0 =0, \, a_3 =
+    -\frac{1}{6}\cos 0 = -\frac{1}{6}$
+
+  \item
+    $a_0 = e^0=1, \, a_1=e^0=1, \, a_2= \frac{e^0}{2}=\frac{1}{2}, \,
+    a_3=\frac{e^0}{6}=\frac{1}{6}$
+
+  \item
+    $a_0=\log (1+0) =0, \, a_1 = (1+0)^{-1} = 1, \, a_2 = \frac{-(1+0)^{-2}}{2}=
+    -\frac{1}{2}, \, a_3 = \frac{2(1+0)^{-3}}{6} = \frac{1}{3}$
+  \end{enumerate}
+
+\end{enumerate}
 
 \end{document}
