--- a/calculus.tex
+++ b/calculus.tex
@@ -630,5 +630,130 @@
   \end{enumerate}
 \end{enumerate}
 
+\newpage
+
+\begin{enumerate}[label=\ref{sec:taylor}.\arabic*]
+  \setlength{\itemsep}{1ex}
+  
+\item
+  \begin{enumerate}[label=(\arabic*)]
+
+    \setlength{\itemsep}{1ex}
+    
+  \item $f(x) = \sin x$ とすると $\sin 3 = f(3)$ である．$3$ と $\pi$
+    が近いので，$x=\pi$ の周りでの $f$ の $3$
+    次近似を用いる．$f(x) = {\ds \sum_{n=0}^{3}}
+    \frac{f^{(n)}(\pi)}{n!} (x-\pi)^n +R(x)= -(x-\pi) +
+    \frac{(x-\pi)^3}{6} + R(x)$ とすると，テイラーの定理から
+    $R(3) = \frac{f^{(4)}(c)}{4!}(3-\pi)^4 = \frac{\sin
+      c}{24}(3-\pi)^4, \; 3 < c < \pi$ を満たす実数 $c$ が存在す
+    る．$|\sin c| <1$
+    なので，$|R(3)| < \frac{(\pi-3)^4}{24}<
+    \frac{(3.15-3)^4}{24}=0.00625 < 0.01$
+    より $-(3-\pi) + \frac{(3-\pi)^3}{6} = 0.141\cdots$ は誤
+    差 $0.01$ 以内の $\sin 3$ の近似値である．（実際には $\pi$ の近似値を何桁ま
+    で使うかによってさらに多少の誤差が生じるが省略する．）
+
+  \item $f(x) = \cos x$ とすると $\cos 1.6 = f(1.6)$ であ
+    る．$1.6$ と $\frac{\pi}{2}=1.570796\cdots $ が近いので，$x=\frac{\pi}{2}$ の周りで
+    の $f$ の $3$
+    次近似を用いる．$f(x) = {\ds \sum_{n=0}^{3}}
+    \frac{f^{(n)}\left(\frac{\pi}{2}\right)}{n!}\left(x-\frac{\pi}{2}\right)^n + R(x) =
+    -\left(x-\frac{\pi}{2}\right) +
+    \frac{\left(x-\frac{\pi}{2}\right)^3}{6} + R(x)$ とすると，テイラー
+    の定理から
+    $R(1.6) = \frac{f^{(4)}(c)}{4!}\left(1.6-\frac{\pi}{2}\right)^4 =
+    \frac{ \cos c}{24}\left( 1.6-\frac{\pi}{2}\right)^4 , \,
+    \frac{\pi}{2} < c < 1.6$ を満たす実数 $c$ が存在する．$|\cos c|
+    <1$
+    なので，$|R(1.6)| < \frac{\left(1.6 - \frac{\pi}{2}\right)^4}{24}
+    < \frac{(1.6-1.5)^4}{24} < 4.17 \times 10^{-6} < 0.01$ よ
+    り $-\left(1.6-\frac{\pi}{2}\right) +
+    \frac{\left(1.6-\frac{\pi}{2}\right)^3}{6} =-0.029\cdots$ は誤
+    差 $0.01$ 以内の $\cos 1.6$ の近似値である．
+
+  \item $f(x)=e^x$ とすると $\sqrt{e} = f\left(\frac{1}{2}\right)$ であ
+    る．$\frac{1}{2}=0.5$ は $0$ に近いので，$x=0$ の周りでの $f$ の $3$
+    次近似を用いる．$f(x) = {\ds
+      \sum_{n=0}^{3}}\frac{f^{(n)}(0)}{n!}x^n + R(x) = 1 + x +
+    \frac{x^2}{2} + \frac{x^3}{6} + R(x)$ とすると，テイラーの定理か
+    ら
+    $R\left(\frac{1}{2}\right) = \frac{f^{(4)}(c)}{4!}\left(
+      \frac{1}{2}\right)^4= \frac{e^c}{384}, \, 0 < c < \frac{1}{2}$ を
+    満たす実数 $c$ が存在する．$1< e^c < e^{\frac{1}{2}} < e^1 < 3$ な
+    ので，$0< R\left(\frac{1}{2}\right) < \frac{3}{384} =
+    \frac{1}{128} < 0.01$ より
+    $1+\frac{1}{2} + \frac{\left(\frac{1}{2}\right)^2}{2} +
+    \frac{\left(\frac{1}{2}\right)^3}{6} = \frac{79}{48}= 1.6458\cdots$
+    は誤差 $0.01$ 以内の $\sqrt{e}$ の近似値である．
+
+  \item $f(x) = \log(1+x)$ とすると，$\log 1.2 = f(0.2)$ である．$x=0$
+    の周りでの $f$ の $2$
+    次近似を用いる．$f(x) = f(0) + f'(0)x + \frac{f''(0)}{2}x^2 + R(x)
+    = x -\frac{x^2}{2} + R(x)$ とすると，テイラーの定理から
+    $R(0.2) = \frac{f^{(3)}(c)}{3!}(0.2)^3 = \frac{1}{375(1+c)^3}, \,
+    0 < c < 0.2$ を満たす実数 $c$ が存在する．$0< \frac{1}{(1+c)^3}
+    <1$ なので，$0< R(0.2) < \frac{1}{375} <0.01$ より
+    $0.2 - \frac{0.2^2}{2} = 0.18$ は誤差 $0.01$ 以内の $\log 1.2$ の近
+    似値である．
+
+  \item $f(x) = \tan^{-1} x$ とすると．$\tan^{-1} 0.02 = f(0.02)$ であ
+    る．$x=0$ の周りでの $f$
+    の1次近似を用いる．$f(x) = f(0) + f'(0)x + R(x) = x + R(x)$ とする
+    と，テイラーの定理から
+    $R(0.02) = \frac{f^{(2)}(c)}{2} (0.02)^2=
+    -\frac{c}{1250(c^2+1)^2}, \, 0 < c < 0.02$ を満たす実数 $c$ が存在
+    する．$\frac{c}{(c^2+1)^2} < \frac{0.02}{(0.02^2+1)^2} <
+    0.01998\cdots < 0.02$
+    なので，$|R(0.02)| < \frac{0.02}{1250} = \frac{1}{62500} < 0.01$ よ
+    り $0.02$ は $\tan^{-1}0.02$ の誤差 $0.01$ 以内の近似値である．
+    
+  \end{enumerate}
+
+\item
+  \begin{enumerate}[label=(\arabic*)]
+    
+    \setlength{\itemsep}{1ex}
+    
+  \item
+    
+  \item
+    
+  \item
+    
+  \end{enumerate}
+
+
+\item
+  \begin{enumerate}[label=(\arabic*)]
+    
+    \setlength{\itemsep}{1ex}
+    
+  \item
+    
+  \item
+    
+  \item
+    
+  \end{enumerate}
+
+\item
+
+\item
+  \begin{enumerate}[label=(\arabic*)]
+    
+    \setlength{\itemsep}{1ex}
+    
+  \item
+    
+  \item
+    
+  \item
+    
+  \end{enumerate}
+
+\item
+  
+\end{enumerate}
 
 \end{document}
