--- a/calculus.tex
+++ b/calculus.tex
@@ -309,19 +309,8 @@
     
   \end{edaenumerate}
 
-\item $\ds f(x) = \log\frac{1+x}{1-x}$ をうまく利用して，以下の値の小数
+\item $\ds f(x) = \log\frac{1+x}{1-x}$ をうまく利用して，$\log 2$ の小数
   点以下第3位までを確定させよう．
-
-  \vspace{1ex}
-
-  \begin{edaenumerate}<retusuu=3>[(1)]
-
-  \item $\log 2$
-
-  \item $\log 3$
-
-  \item $\log 5$
-  \end{edaenumerate}
 
 \item $f_n(x) = \sqrt[n]{1+x}$ をうまく利用して，以下の値の小数点
   以下第3位までを確定させよう．
@@ -693,19 +682,18 @@
     
   \end{enumerate}
 
-\item
-  \begin{enumerate}[label=(\arabic*)]
-    
-    \setlength{\itemsep}{1ex}
-    
-  \item
-    
-  \item
-    
-  \item
-    
-  \end{enumerate}
-
+\item $\log 2 = f\left(\frac{1}{3}\right)$ である．$x=0$ の周りで
+  の $f$ の $7$ 次近似式
+  $g(x) = 2x+\frac{2}{3}x^3+\frac{2}{5}x^5+\frac{2}{7}x^7$ と $f$ の誤
+  差を $R(x) = f(x) - g(x)$ とすると，テイラーの定理か
+  ら
+  $R\left(\frac{1}{3}\right) = \frac{1}{52488}\left(\frac{1}{(1-c)^8}
+    - \frac{1}{(1+c)^8}\right), 0 < c < \frac{1}{3}$ を満たす $c$ があ
+  る．$0 < R\left(\frac{1}{3}\right) < \frac{255}{524288}$ なの
+  で，$g\left(\frac{1}{3}\right) < f\left(\frac{1}{3}\right) <
+  g\left(\frac{1}{3}\right) + \frac{255}{524288}$ である．よっ
+  て，$0.6931 < \log 2 < 0.6937$ より小数第3位までが $0.693$ と確定す
+  る．
 
 \item
   \begin{enumerate}[label=(\arabic*)]
