解答5.1-5.2を修正しつつ解答5.3を作成

--- a/calculus.tex
+++ b/calculus.tex
@@ -622,69 +622,69 @@
     \setlength{\itemsep}{1ex}
     
   \item $f(x) = \sin x$ とすると $\sin 3 = f(3)$ であり，$3$ は $\pi$
-    に近い．$\pi$ に近い $x$ に対して $f(x)$ は $3$ 次多項式
+    に近い．$\pi$ に近い $x$ に対し $f(x)$ を $3$ 次式
     $g(x) = {\ds \sum_{n=0}^{3}} \frac{f^{(n)}(\pi)}{n!} (x-\pi)^n=
-    -(x-\pi) + \frac{(x-\pi)^3}{6} $ で近似できる．その誤差を $R(x) =
-    f(x) - g(x)$
+    -(x-\pi) + \frac{(x-\pi)^3}{6} $ で近似し，その誤差を $R(x) = f(x)
+    - g(x)$
     とすると，テイラーの定理から$R(3) = \frac{f^{(4)}(c)}{4!}(3-\pi)^4
-    = \frac{\sin c}{24}(3-\pi)^4, \; 3 < c < \pi$ を満たす実数 $c$ が存
-    在する．$|\sin c|
+    = \frac{\sin c}{24}(3-\pi)^4, \; 3 < c < \pi$ を満たす $c$ があ
+    る．$|\sin c|
     <1$なので，$|R(3)| < \frac{(\pi-3)^4}{24}<
-    \frac{(3.15-3)^4}{24}=0.00625 < 0.01$ より近似値 $g(3)= 0.141\cdots$ の誤
-    差は $0.01$ 以内．（ $\pi$ の近似精度からも誤差が生じるが省略
-    する．）
+    \frac{(3.15-3)^4}{24}=0.00625 < 0.01$ より近似値 $g(3)=
+    0.141\cdots$ の誤差は $0.01$ 以内．
 
   \item $f(x) = \cos x$ とすると $\cos 1.6 = f(1.6)$ であ
-    り，$1.6$ は $\frac{\pi}{2}=1.57\cdots $ に近い．$3$ 次多項
-    式
+    り，$1.6$ は $\frac{\pi}{2}=1.57\cdots $ に近い．$f(x)$ と $3$ 次近
+    似式
     $g(x) = {\ds \sum_{n=0}^{3}}
     \frac{f^{(n)}\left(\frac{\pi}{2}\right)}{n!}\left(x-\frac{\pi}{2}\right)^n
     = -\left(x-\frac{\pi}{2}\right) +
-    \frac{\left(x-\frac{\pi}{2}\right)^3}{6}$ と $f(x)$ の誤差を
+    \frac{\left(x-\frac{\pi}{2}\right)^3}{6}$ との誤差を
     $R(x) = f(x) - g(x)$
     とすると，テイラーの定理から$R(1.6) =
     \frac{f^{(4)}(c)}{4!}\left(1.6-\frac{\pi}{2}\right)^4 = \frac{
       \cos c}{24}\left( 1.6-\frac{\pi}{2}\right)^4 , \, \frac{\pi}{2}
-    < c < 1.6$ を満たす実数 $c$ が存在する．$|\cos c| <1$なの
-    で，$|R(1.6)| < \frac{\left(1.6 - \frac{\pi}{2}\right)^4}{24} <
-    0.01$ より近似値 $g(1.6)=-0.029\cdots$ の誤差は $0.01$ 以内．
+    < c < 1.6$ を満たす $c$ がある．$|\cos c|
+    <1$なので，$|R(1.6)| < \frac{\left(1.6 -
+        \frac{\pi}{2}\right)^4}{24} < 0.01$ より近似
+    値 $g(1.6)=-0.029\cdots$ の誤差は $0.01$ 以内．
 
   \item $f(x)=e^x$ とすると $\sqrt{e} = f\left(\frac{1}{2}\right)$ であ
-    る．$3$ 次多項式
+    る．$f(x)$ と $3$ 次近似式
     $g(x) = {\ds \sum_{n=0}^{3}}\frac{f^{(n)}(0)}{n!}x^n = 1 + x +
-    \frac{x^2}{2} + \frac{x^3}{6} $ と $f(x)$ の誤差を $R(x) = f(x) -
-    g(x)$
+    \frac{x^2}{2} + \frac{x^3}{6} $ との誤差を $R(x) = f(x)
+    - g(x)$
     とすると，テイラーの定理から$R\left(\frac{1}{2}\right) =
     \frac{f^{(4)}(c)}{4!}\left( \frac{1}{2}\right)^4= \frac{e^c}{384},
-    \, 0 < c < \frac{1}{2}$ を満たす実数 $c$
-    が存在する．$e^c < e^{\frac{1}{2}} < 3$
-    なので，$\left|R\left(\frac{1}{2}\right)\right| < \frac{3}{384} < 0.01$
-    より近似値 $g\left(\frac{1}{2}\right) = \frac{79}{48}=
-    1.6458\cdots$ の誤差は $0.01$ 以内．
+    \, 0 < c < \frac{1}{2}$ を満たす $c$
+    がある．$e^c < e^{\frac{1}{2}} < 3$ なの
+    で，$\left|R\left(\frac{1}{2}\right)\right| < \frac{3}{384} <
+    0.01$ より近似値
+    $g\left(\frac{1}{2}\right) = \frac{79}{48}= 1.6458\cdots$ の誤差
+    は $0.01$ 以内．
 
-  \item $f(x) = \log(1+x)$ とすると $\log 1.2 = f(0.2)$ である．$2$ 次
-    式
+  \item $f(x) = \log(1+x)$ とすると $\log 1.2 = f(0.2)$ である．$f(x)$
+    と $2$ 次近似式
     $g(x) = {\ds \sum_{n=0}^{2}}\frac{f^{(n)}(0)}{n!}x^n= x
-    -\frac{x^2}{2}$ と $f(x)$ の誤差を $R(x)=f(x)-g(x)$ とすると，テイ
+    -\frac{x^2}{2}$ との誤差を $R(x)=f(x)-g(x)$ とすると，テイ
     ラーの定理から$R(0.2) = \frac{f^{(3)}(c)}{3!}(0.2)^3 =
-    \frac{1}{375(1+c)^3}, \, 0 < c < 0.2$ を満たす実数 $c$ が存在す
+    \frac{1}{375(1+c)^3}, \, 0 < c < 0.2$ を満たす $c$ があ
     る．$\frac{1}{(1+c)^3} <1$ なので，$|R(0.2)| < \frac{1}{375}
     <0.01$ より近似値 $g(0.2)= 0.18$ の誤差は $0.01$ 以内．
 
   \item $f(x) = \tan^{-1} x$ とすると $\tan^{-1} 0.02 = f(0.02)$ であ
-    る．$1$ 次多項式 $g(x)= f(0) + f'(0)x= x$ と $f(x)$ の誤差
+    る．$1$ 次近似式 $g(x)= f(0) + f'(0)x= x$ と $f(x)$ の誤差
     を $R(x)=f(x)-g(x)$とすると，テイラーの定理から
     $R(0.02) = \frac{f^{(2)}(c)}{2} (0.02)^2=
-    -\frac{c}{1250(c^2+1)^2}, \, 0 < c < 0.02$ を満たす実数 $c$ が存在
-    する．$\frac{c}{(c^2+1)^2} < \frac{0.02}{(0.02^2+1)^2} < 0.02$な
-    ので，$|R(0.02)| < \frac{0.02}{1250} <
-    0.01$ より近似値 $g(0.02)=0.02$ の誤差は $0.01$ 以内．
+    -\frac{c}{1250(c^2+1)^2}, \, 0 < c < 0.02$ を満たす $c$ があ
+    る．$\frac{c}{(c^2+1)^2} < \frac{0.02}{(0.02^2+1)^2} < 0.02$なの
+    で，$|R(0.02)| < \frac{0.02}{1250} < 0.01$ より近似
+    値 $g(0.02)=0.02$ の誤差は $0.01$ 以内．
     
   \end{enumerate}
 
-\item $\log 2 = f\left(\frac{1}{3}\right)$ である．$x=0$ の周りで
-  の $f$ の $7$ 次近似式
-  $g(x) = 2x+\frac{2}{3}x^3+\frac{2}{5}x^5+\frac{2}{7}x^7$ と $f$ の誤
+\item $\log 2 = f\left(\frac{1}{3}\right)$ である．$f$ とその $7$ 次近
+  似式 $g(x) = 2x+\frac{2}{3}x^3+\frac{2}{5}x^5+\frac{2}{7}x^7$ との誤
   差を $R(x) = f(x) - g(x)$ とすると，テイラーの定理か
   ら
   $R\left(\frac{1}{3}\right) = \frac{1}{52488}\left(\frac{1}{(1-c)^8}
@@ -700,11 +700,28 @@
     
     \setlength{\itemsep}{1ex}
     
-  \item
+  \item $\sqrt{1.2}=f_2(0.2)$ である．$f_2$ と $2$ 次近似式
+    $g(x) = 1+\frac{x}{2}-\frac{x^2}{8}$ との誤差を $R(x) =
+    f_2(x)-g(x)$ とすると，テイラーの定理から
+    $R(0.2) = \frac{1}{2000(1+c)^{5/2}}, 0 < c < 0.2$ を満たす $c$ があ
+    る．$0 < R(0.2) < \frac{1}{2000}$
+    なので，$g(0.2) < f(0.2) < g(0.2)+ \frac{1}{2000}$ である．よっ
+    て，$1.095 < \sqrt{1.2} < 1.0955$ より小数点第3位までが $1.095$ と
+    確定する．
     
-  \item
+  \item $\sqrt[3]{1.01}=f_3(0.01)$ である．$f_3$ とその $1$ 次近似
+    式 $g(x) = 1+\frac{x}{3}$ との誤差を $R(x) = f_3(x)-g(x)$ とすると，
+    テイラーの定理から $R(0.01) = -\frac{1}{90000(1+c)^{5/3}}, 0 < c <
+    0.01$ を満たす $c$ がある．$-\frac{1}{90000} < R(0.01) < 0$ なの
+    で，$g(0.01) -\frac{1}{90000} < f_3(0.01) < g(0.01)$
+    より，$1.00332 < \sqrt[3]{1.01} < 1.00334$ から小数点第3位まで
+    が $1.003$ と確定する．
     
-  \item
+  \item $\sqrt[5]{0.8} = f_5(-0.2)$ である．$3$ 次近似式
+    $g(x) = 1+\frac{x}{5} - \frac{2}{25}x^2+\frac{6}{125}x^3$ で近似す
+    れば，テイラーの定理から誤差は $-\frac{6}{15625} < R(-0.2) <0$ と評
+    価できる．よって，$ 0.9564 < \sqrt[5]{0.8} < 0.9568$ より，小数
+    第3位までが $0.956$ と確定する．
     
   \end{enumerate}
 
