--- a/calculus.tex
+++ b/calculus.tex
@@ -15,14 +15,13 @@
 
 \title{\Huge 微分積分 問題集}
 
-\begin{document}
 
+\begin{document}
 
 \maketitle
 \thispagestyle{empty}
 
 \newpage
-
 
 
 \section{数列の極限}\label{sec:sequence}
@@ -327,7 +326,7 @@
     
   \end{edaenumerate}
 
-\item 以下の条件を満たす関数 $f$ に対し，$f(1)$ の値の小数点以下第 $4$
+\item 以下の条件を満たす関数 $f$ に対し，$f(0.5)$ の値の小数点以下第 $2$
   位までを確定させよう．
   \[
     f'(x) = e^{-x^2}, \quad f(0)=0
@@ -725,7 +724,21 @@
     
   \end{enumerate}
 
-\item
+\item $x=0$ を中心とする $f$ の $6$ 次近似式を $g(x)$ とし，その誤差
+  を $R(x)=f(x)-g(x)$ とする．$f'(x)=e^{-x^2}$ より $f$ の高階導関数
+  は $f''(x) = -2xe^{-x^2}, f^{(3)}(x)=2e^{-x^2}(2x^2-1), \ldots$ と逐
+  次計算できるので，$f(0)=0$ と合わせて $f$ の $6$ 次近似式は
+  $g(x)= x - \frac{x^3}{3} + \frac{x^5}{10}$ と求められる．テイラーの定
+  理より
+  $R(0.5) = \frac{f^{(7)}(c)}{7!}(0.5)^7=
+  \frac{e^{-c^2}(8c^6-60c^4+90c^2-15)}{80640}, 0 < c < 0.5$ を満た
+  す $c$ がある．ここで $3$ 次関数 $p(t) = 8t^3-60t^2+90t-15$ を考える
+  と，$0<c^2<0.25$ なので $-15 < p(c^2) < 3.875$
+  より，$|R(0.5)| < \left|\frac{e^{-c^2}p(c^2)}{80640}\right| < \left|
+    \frac{p(c^2)}{80640}\right| < \frac{15}{80640} = \frac{1}{5376}$ で
+  ある．よって，$g(0.5) - \frac{1}{5376} < f(0.5) <
+  g(0.5)+\frac{1}{5376}$ より $0.4612 < f(0.5) < 0.4617$ である．これよ
+  り小数第2位までが $0.46$ と確定する．
 
 \item
   \begin{enumerate}[label=(\arabic*)]
