解答5.5を作成

--- a/calculus.tex
+++ b/calculus.tex
@@ -332,7 +332,7 @@
     f'(x) = e^{-x^2}, \quad f(0)=0
   \]
 
-\item 以下の条件を満たす関数 $f$ に対し，$f$ の $5$ 次マクローリン多項式
+\item 以下の条件を満たす $C^{\infty}$ 級関数 $f$ に対し，$f$ の $5$ 次マクローリン多項式
   \[
     P(x) = f(0) + f'(0)x + \frac{f''(0)}{2!}x^2 +
     \frac{f^{(3)}(0)}{3!}x^3 + \frac{f^{(4)}(0)}{4!}x^4 + \frac{f^{(5)}(0)}{5!}x^5
@@ -347,13 +347,13 @@
     
   \item $f'(x) = f(x), \quad f(0) =1$ \quad $\ds (a=1/2)$
 
-  \item $\ds 2f''(x) +5'f(x) -3 f(x)=0, \quad f(0)=1, \; f'(0)= 1/2$ \quad $(a=1)$
+  \item $\ds 2f''(x) +5f'(x) -3 f(x)=0, \quad f(0)=1, \; f'(0)= 1/2$ \quad $(a=1)$
 
   \item $\ds f(x) + \log\left( f'(x)\right) =0, \; f(0)=0$ \quad $(a=0.2)$
     
   \end{enumerate}
 
-\item 関数 $f$ が以下の条件を満たすとする．
+\item $C^{\infty}$ 級関数 $f$ が以下の条件を満たすとする．
   \[
     f''(x) = -f(x), \quad f(\pi)=0, \; f'(\pi) = -1
   \]
@@ -745,11 +745,34 @@
     
     \setlength{\itemsep}{1ex}
     
-  \item
+  \item $f(x) = f'(x) = f''(x) = f^{(3)}(x) = f^{(4)}(x) = f^{(5)}(x)$
+    より $f(0) = f'(0) = f''(0)=f^{(3)}(0)=f^{(4)}(0)=f^{(5)}(0)=1$ で
+    ある．これより
+    $P(x) = 1 + x + \frac{x^2}{2} + \frac{x^3}{6} + \frac{x^4}{24} +
+    \frac{x^5}{120}, \, P\left(\frac{1}{2}\right) =
+    \frac{6331}{3840}=1.6486\cdots$.
     
-  \item
+  \item まず，$f''(0) = \frac{-5f'(0) +3f(0)}{2}=\frac{1}{4}$ である．
+    次に，$2f^{(3)}(x) + 5f''(x) - 3f'(x)=0$ より
+    $f^{(3)}(0) = \frac{-5f''(0)+3f'(0)}{2}=\frac{1}{8}$ である．以下同
+    様に
+    $f^{(4)}(0) = \frac{-5f^{(3)}(0)+3f''(0)}{2} = \frac{1}{16},
+    f^{(5)}(0) = \frac{-2f^{(4)}(0)+3f^{(3)}(0)}{2}=\frac{1}{32}$ であ
+    る．これより
+    $P(x) = 1+ \frac{x}{2} + \frac{x^2}{8} + \frac{x^3}{48} +
+    \frac{x^4}{384} + \frac{x^5}{3840}, P(1) = \frac{6331}{3840} = 1.6486\cdots$.
     
-  \item
+  \item $f'(x) = e^{-f(x)}$ より $f'(0) = e^{-f(0)} = 1$,
+    $f'(x) + \frac{f''(x)}{f'(x)}=0$ から $f''(x) =
+    -f'(x)^2$ より $f''(0) = -f'(0)^2=-1$ ,
+    $f^{(3)}(x) = -2f'(x)f''(x)= 2f'(x)^3$ より $f^{(3)}(0)
+    =2f'(0)^3=2$ , $f^{(4)}(x) = 6f'(x)^2 f''(x) =
+    -6f''(x)^2$ より $f^{(4)}(0) = -6f''(0)^2=-6$ ,
+    $f^{(5)}(x) = -12f''(x)f^{(3)}(x)$ より
+    $f^{(5)}(0) = -12 f''(0) f^{(3)}(0) =24$. これより
+    $P(x) = x-\frac{x^2}{2} +
+    \frac{x^3}{3}-\frac{x^4}{4}+\frac{x^5}{5}, \;
+    P(0.2)=0.1823\cdots$.
     
   \end{enumerate}
 
