解答5.6を作成

--- a/calculus.tex
+++ b/calculus.tex
@@ -777,6 +777,8 @@
   \end{enumerate}
 
 \item
+  $f''(\pi) = -f(\pi)=0, \, f^{(3)}(\pi)=-f'(\pi)=1, \, f^{(4)}(\pi)=
+  -f''(\pi)=0$ より $P(x) = -(x-\pi) + \frac{(x-\pi)^3}{6}, P(3) = 0.141\cdots$.
   
 \end{enumerate}
 
