--- a/calculus.tex
+++ b/calculus.tex
@@ -910,7 +910,7 @@
    ら $x=0$ の近くで $f(x, g(x))=0,\, g(0)=-1$ を満たす微分可能な関
    数 $g$ があり，$g'(0) = -\frac{f_x(0,-1)}{f_y(0,-1)}$ である．つま
    り，$(0,-1)$ の近くで曲線 $f(x,y)=0$ は $y=g(x)$ と一致するの
-   で，$(0,-1)$ における接線の方程式は $y=g'(0)(x-0)+g(0)$ である．これ
+   で，$(0,-1)$ における接線の方程式は $y-g(0)=g'(0)(x-0)$ である．これ
    を整理して $f_x(0,-1)(x-0) + f_y(0,-1)(y+1) =0$ より接線の方程式
    は $-2x-3y-3=0$.
 
