--- a/calculus.tex
+++ b/calculus.tex
@@ -388,7 +388,7 @@
     \frac{f(P+h\bm{n}) - f(P)}{h}$ を求めよう．
 
   \item 平面の単位ベクトル $\bm{n}$ の中で，方向微分
-    $\ds \frac{\partial f}{\partial \bm{n}}(P)$ が最大となるものを求めよう．
+    $\ds \frac{\partial f}{\partial \bm{n}}(P)$ が最小となるものを求めよう．
   \end{enumerate}
 
 \item $f(x,y) = 2x^2+3y^2-1$ とし，$P_0=(3,4)$ とする．
@@ -874,8 +874,8 @@
     
   \item (2) より
     $\frac{\partial f}{\partial \bm{n}}(P) = \nabla f(P) \cdot \bm{n}$
-    なので，$\bm{n} = \frac{\nabla f(P)}{ |\nabla f(P)|} =
-    \frac{1}{\sqrt{1321}}(-36,5)$ のとき最大．
+    なので，$\bm{n} = -\frac{\nabla f(P)}{ |\nabla f(P)|} =
+    \frac{1}{\sqrt{1321}}(36,-5)$ のとき最小．
   \end{enumerate}
 
 \newpage
