解答7.3を微修正

--- a/calculus.tex
+++ b/calculus.tex
@@ -967,14 +967,14 @@
    値 $3$ をとる．
 
  \item 明らかに $f(x,y) \geqq 0$ かつ $f(x,0)=f(y,0)=0$ なので $f$ の最
-   小値は $0$ である．また，$f$ の停留点は $t \neq 0$ によって
-   $(0,t), (t,0), (t,\pm t^2)$ と書ける点全てである．特に，
-   $f(t, \pm t^2) = \frac{1}{2} \; (t \neq 0) $ が $f$ の最大値の候補で
-   ある．ここで，$k >\frac{1}{2}$
-   のとき，$k - f(x,y) = \frac{kx^8-x^4y^2+ky^4}{x^8+y^4} =
-   \frac{k(x^4-y^2)^2+(2k-1)x^4y^2}{x^8+y^4} >0$ なので $f(x,y) = k$ を
-   満たす $(x,y)$ は存在しない．よって，$f(x,y) \leqq \frac{1}{2}$ なの
-   で $\frac{1}{2}$ は $f$ の最大値である．
+   小値は $0$ である．また，$(x,y) \neq (0,0)$ での $f$ の停留点は $t
+   \neq 0$ によって$(0,t), (t,0), (t,\pm t^2)$ と書ける点全てなの
+   で，$f(t, \pm t^2) = \frac{1}{2} \; (t \neq 0) $ が $f$ の最大値の候
+   補である．ここで，$k
+   >\frac{1}{2}$のとき，$k - f(x,y) = \frac{kx^8-x^4y^2+ky^4}{x^8+y^4}
+   = \frac{k(x^4-y^2)^2+(2k-1)x^4y^2}{x^8+y^4} >0$ なので $f(x,y) = k$
+   を満たす $(x,y)$ は存在しない．よって，$f(x,y) \leqq \frac{1}{2}$ な
+   ので $\frac{1}{2}$ は $f$ の最大値である．
  \end{enumerate}
 
 \end{document}
