不要なusepackageを削除

--- a/calculus.tex
+++ b/calculus.tex
@@ -1,5 +1,4 @@
-\documentclass[11pt, uplatex, dvipdfmx, twoside]{jsarticle}
-\usepackage{graphicx}
+\documentclass[11pt, uplatex, dvipdfmx]{jsarticle}
 \usepackage{amsmath,amsfonts, bm, braket, setspace, emathEy, enumitem}
 
 \newcommand{\ds}{\displaystyle}
