--- a/calculus.tex
+++ b/calculus.tex
@@ -1,5 +1,5 @@
 \documentclass[11pt, uplatex, dvipdfmx]{jsarticle}
-\usepackage{amsmath,amsfonts, bm, braket, setspace, emathEy, enumitem}
+\usepackage{amsmath,amsfonts, bm, braket, setspace, emathEy, enumerate}
 
 \newcommand{\ds}{\displaystyle}
 \renewcommand{\dlim}{\lim\limits} %emathEyを使わないなら\newcommand
@@ -25,7 +25,7 @@
 
 \section{数列の極限}\label{sec:sequence}
 
-\begin{enumerate}[label=\arabic{section}.\arabic*]
+\begin{enumerate}[\ref{sec:sequence}.1]
   
   \setlength{\itemsep}{1zh}
   
@@ -47,7 +47,7 @@
   \[
     a_{n+1} = \frac{a_{n}}{2}+\frac{1}{a_{n}} ,\quad a_1=-2
   \]
-  \begin{enumerate}[label=(\arabic*)]
+  \begin{enumerate}[(1)]
     \setlength{\itemsep}{1ex}
 
 
@@ -71,7 +71,7 @@
 \section{関数の極限}\label{sec:limit}
 
 
-\begin{enumerate}[label=\arabic{section}.\arabic*]
+\begin{enumerate}[\ref{sec:limit}.1]
 
   \setlength{\itemsep}{1zh}
   
@@ -145,7 +145,7 @@
 
 \section{導関数}\label{sec:derivative}
 
-\begin{enumerate}[label=\arabic{section}.\arabic*]
+\begin{enumerate}[\ref{sec:derivative}.1]
 
   \setlength{\itemsep}{1zh}
   
@@ -215,7 +215,7 @@
 
 \section{不定形の極限}\label{sec:hospital}
 
-\begin{enumerate}[label=\arabic{section}.\arabic*]
+\begin{enumerate}[\ref{sec:hospital}.1]
 
   \setlength{\itemsep}{1zh}
   
@@ -283,7 +283,7 @@
 
 \section{テイラーの定理}\label{sec:taylor}
 
-\begin{enumerate}[label=\arabic{section}.\arabic*]
+\begin{enumerate}[\ref{sec:taylor}.1]
 
   \setlength{\itemsep}{1zh}
   
@@ -340,7 +340,7 @@
   
   \vspace{1ex}
 
-  \begin{enumerate}[label=(\arabic*)]
+  \begin{enumerate}[(1)]
 
     \setlength{\itemsep}{1ex}
     
@@ -369,7 +369,7 @@
 
 \section{偏微分}\label{sec:partial}
 
-\begin{enumerate}[label=\arabic{section}.\arabic*]
+\begin{enumerate}[\ref{sec:partial}.1]
 
   \setlength{\itemsep}{1zh}
   
@@ -377,7 +377,7 @@
 
   \vspace{1ex}
 
-  \begin{enumerate}[label=(\arabic*)]
+  \begin{enumerate}[(1)]
     \setlength{\itemsep}{1ex}
     
   \item $P$ における $f$ の勾配 $\nabla f(P)$ を求めよう．
@@ -394,7 +394,7 @@
 
   \vspace{1ex}
   
-  \begin{enumerate}[label=(\arabic*)]
+  \begin{enumerate}[(1)]
     \setlength{\itemsep}{1ex}
     
   \item 平面ベクトル $\bm{d}_0=-\nabla f(P_0)$ を求めよう．
@@ -427,7 +427,7 @@
 
 \section{2変数関数の極値}\label{sec:extremal}
 
-\begin{enumerate}[label=\arabic{section}.\arabic*]
+\begin{enumerate}[\ref{sec:extremal}.1]
 
   \setlength{\itemsep}{1zh}
   
@@ -457,11 +457,11 @@
 
 \section*{解答}
 
-\begin{enumerate}[label=\ref{sec:sequence}.\arabic*]
+\begin{enumerate}[\ref{sec:sequence}.1]
   \setlength{\itemsep}{1ex}
   
 \item
-  \begin{enumerate}[label=(\arabic*)]
+  \begin{enumerate}[(1)]
     \setlength{\itemsep}{1ex}
     
   \item
@@ -487,7 +487,7 @@
   \end{enumerate}
 
 \item
-  \begin{enumerate}[label=(\arabic*)]
+  \begin{enumerate}[(1)]
     \setlength{\itemsep}{1ex}
 
   \item $a_1=-2<0$ と漸化式から任意の $n$ で $a_n <0$ なので，$\{a_n\}$ は上に有界で
@@ -522,12 +522,12 @@
   = \sqrt[3]{3}$.
 \end{enumerate}
 
-\begin{enumerate}[label=\ref{sec:limit}.\arabic*]
+\begin{enumerate}[\ref{sec:limit}.1]
 
   \setlength{\itemsep}{1ex}
   
 \item
-  \begin{enumerate}[label=(\arabic*)]
+  \begin{enumerate}[(1)]
     \setlength{\itemsep}{1ex}
     
   \item
@@ -545,7 +545,7 @@
   \end{enumerate}
 
 \item 
-  \begin{enumerate}[label=(\arabic*)]
+  \begin{enumerate}[(1)]
     \setlength{\itemsep}{1ex}
     
   \item
@@ -580,11 +580,11 @@
 
 \end{enumerate}
 
-\begin{enumerate}[label=\ref{sec:derivative}.\arabic*]
+\begin{enumerate}[\ref{sec:derivative}.1]
   \setlength{\itemsep}{1ex}
   
 \item
-  \begin{enumerate}[label=(\arabic*)]
+  \begin{enumerate}[(1)]
     \setlength{\itemsep}{1ex}
     
   \item
@@ -629,7 +629,7 @@
   g^{(3)}(0)=6a_3$ より
   $a_0=g(0)=f(0), \, a_1= g'(0) = f'(0), \, a_2 = g''(0)/2 = f''(0)/2,
   \, a_3=g^{(3)}(0)/6=f^{(3)}(0)/6$ である．
-  \begin{enumerate}[label=(\arabic*)]
+  \begin{enumerate}[(1)]
     \setlength{\itemsep}{1ex}
     
   \item
@@ -647,11 +647,11 @@
 
 \end{enumerate}
 
-\begin{enumerate}[label=\ref{sec:hospital}.\arabic*]
+\begin{enumerate}[\ref{sec:hospital}.1]
   \setlength{\itemsep}{1ex}
   
 \item $(\ast)$ の箇所でロピタルの定理を用いている．
-  \begin{enumerate}[label=(\arabic*)]
+  \begin{enumerate}[(1)]
     \setlength{\itemsep}{1ex}
     
   \item
@@ -673,7 +673,7 @@
   \end{enumerate}
 
 \item $(\ast)$ の箇所でロピタルの定理を用いている．
-  \begin{enumerate}[label=(\arabic*)]
+  \begin{enumerate}[(1)]
     \setlength{\itemsep}{1ex}
     
   \item $f$ は $x=0$ で連続なので
@@ -697,11 +697,11 @@
 
 \newpage
 
-\begin{enumerate}[label=\ref{sec:taylor}.\arabic*]
+\begin{enumerate}[\ref{sec:taylor}.1]
   \setlength{\itemsep}{1ex}
   
 \item
-  \begin{enumerate}[label=(\arabic*)]
+  \begin{enumerate}[(1)]
 
     \setlength{\itemsep}{1ex}
     
@@ -780,7 +780,7 @@
   る．
 
 \item
-  \begin{enumerate}[label=(\arabic*)]
+  \begin{enumerate}[(1)]
     
     \setlength{\itemsep}{1ex}
     
@@ -826,7 +826,7 @@
   り小数第2位までが $0.46$ と確定する．
 
 \item
-  \begin{enumerate}[label=(\arabic*)]
+  \begin{enumerate}[(1)]
     
     \setlength{\itemsep}{1ex}
     
@@ -868,11 +868,11 @@
 \end{enumerate}
 
 
-\begin{enumerate}[label=\ref{sec:partial}.\arabic*]
+\begin{enumerate}[\ref{sec:partial}.1]
   \setlength{\itemsep}{1ex}
   
 \item
-  \begin{enumerate}[label=(\arabic*)]
+  \begin{enumerate}[(1)]
     \setlength{\itemsep}{1ex}
     
   \item $\nabla f(x,y) = \left( -6x^2+2xy, x^2-2y\right)$ より
@@ -893,7 +893,7 @@
 \newpage
   
  \item
-   \begin{enumerate}[label=(\arabic*)]
+   \begin{enumerate}[(1)]
      \setlength{\itemsep}{1ex}
      
    \item $\nabla f(x,y) = (4x, 6y)$ より $\bm{d}_0 = -\nabla f(3,4) = (-12, -24)$.
@@ -928,11 +928,11 @@
 
  \end{enumerate}
 
- \begin{enumerate}[label=\ref{sec:extremal}.\arabic*]
+ \begin{enumerate}[\ref{sec:extremal}.1]
    \setlength{\itemsep}{1ex}
    
  \item
-   \begin{enumerate}[label=(\arabic*)]
+   \begin{enumerate}[(1)]
      \setlength{\itemsep}{1ex}
      
    \item $f$ の停留点は $(0,0)$ のみで，$(0,0)$ におけるヘシア
